update Expandable component logic

--- a/Enter.UI/Components/Card/EntCard.razor
+++ b/Enter.UI/Components/Card/EntCard.razor
@@ -25,7 +25,7 @@
     }
     @if (Expandable)
     {
-        <EntExpandable Tag="@Tag" Expended="CardExpand">
+        <EntExpandable Tag="@Tag" @bind-Expanded="CardExpand">
             <div class="ent-card-content">
                 @CardBody
             </div>
