--- a/Enter.UI/Components/Expanable/EntExpandable.razor
+++ b/Enter.UI/Components/Expanable/EntExpandable.razor
@@ -2,108 +2,149 @@
 @using Enter.UI.Interops;
 @using Enter.UI.JsService;
 @using Enter.UI.Services.Contracts;
+@using Microsoft.JSInterop;
 @inherits EntBaseComponent
 
-<div 
-    @ref="_reference" 
-    @attributes="@AdditionalAttributes" 
-    @onanimationend="EventUtil.AsNonRenderingEventHandler(OnAnimationEnd)" 
-    class="@RootCss" 
-    style="@RootStyle" 
-    id="@Id">
+<div @ref="_reference"
+@attributes="@AdditionalAttributes"
+@onanimationend="EventUtil.AsNonRenderingEventHandler(OnAnimationEnd)"
+     class="@RootCss"
+     style="@RootStyle"
+     id="@Id">
     @ChildContent
 </div>
 
 @code {
 
-    // Private Properties
-    private EntExpandableAnimationState? animationState = null;
-    private bool? _tempShow = null;
+    enum EntExpandableAnimationState
+    {
+        Opened, Opening, Closed, Closing
+    }
+
+
+    private EntExpandableAnimationState? _animationState = EntExpandableAnimationState.Closed;
+    private bool _expanded, _updateHeight;
     internal double _height = 0;
     private ElementReference _reference { get; set; }
-    // Inject Services
+
     [Inject]
-    internal IEntSharedJsService SharedJsService { get; set; }
+    internal IEntSharedJsService? SharedJsService { get; set; }
 
     // Style and Css
     private string RootCss => CssClassBuilder
         .AddClass("ent-expandable")
-        .AddClass("ent-expandable-closed", animationState == EntExpandableAnimationState.Closed)
-        .AddClass("ent-expandable-opened", animationState == EntExpandableAnimationState.Opened)
-        .AddClass("ent-expandable-closing", animationState == EntExpandableAnimationState.Closing)
-        .AddClass("ent-expandable-opening", animationState == EntExpandableAnimationState.Opening)
+        .AddClass("ent-expandable-closed", _animationState == EntExpandableAnimationState.Closed)
+        .AddClass("ent-expandable-opened", _animationState == EntExpandableAnimationState.Opened)
+        .AddClass("ent-expandable-closing", _animationState == EntExpandableAnimationState.Closing)
+        .AddClass("ent-expandable-opening", _animationState == EntExpandableAnimationState.Opening)
         .Build();
 
     private string RootStyle => StyleBuilder
-        .AddStyle("transition: all 0.25s ease-in-out",animationState is EntExpandableAnimationState.Closing or EntExpandableAnimationState.Opening)
-        .AddStyle($"height : auto",animationState == EntExpandableAnimationState.Opened)
-        .AddStyle($"height : 0px", animationState == EntExpandableAnimationState.Closed)
-        .AddStyle($"height : {_height}px",animationState is EntExpandableAnimationState.Closing or EntExpandableAnimationState.Opening)
+        .AddStyle("transition: all 0.25s ease-in-out", _animationState is EntExpandableAnimationState.Closing or EntExpandableAnimationState.Opening)
+        .AddStyle($"height : auto", _animationState == EntExpandableAnimationState.Opened)
+        .AddStyle($"height : 0px", _animationState == EntExpandableAnimationState.Closed)
+        .AddStyle($"height : {_height}px", _animationState is EntExpandableAnimationState.Closing or EntExpandableAnimationState.Opening)
         .Build();
 
-  
-    
+
+
 
     // Parameters
     [Parameter]
     public RenderFragment? ChildContent { get; set; }
 
     [Parameter]
-    public bool Expended { get; set; } = true;
-
-
-    protected override async Task OnInitializedAsync()
+    public bool Expanded
     {
-        animationState = Expended switch
+        get => _expanded;
+        set
         {
-            true => EntExpandableAnimationState.Opened,
-            false => EntExpandableAnimationState.Closed
-        };
+            if (_expanded == value)
+                return;
+            _expanded = value;
+
+            if (FirstRendered)
+            {
+                _animationState = _expanded ? EntExpandableAnimationState.Opening : EntExpandableAnimationState.Closing;
+                _ = UpdateHeight();
+                _updateHeight = true;
+            }
+            else if (_expanded)
+            {
+                _animationState = EntExpandableAnimationState.Opened;
+            }
+
+            _ = ExpandedChanged.InvokeAsync(_expanded);
+        }
     }
+
+    [Parameter]
+    public EventCallback<bool> ExpandedChanged { get; set; }
+    // protected override async Task OnInitializedAsync()
+    // {
+    //     _animationState = Expanded switch
+    //     {
+    //         true => EntExpandableAnimationState.Opened,
+    //         false => EntExpandableAnimationState.Closed
+    //     };
+    // }
 
 
     public async Task OnAnimationEnd()
     {
         await Task.Delay(200);
-        if (animationState == EntExpandableAnimationState.Closing)
+        if (_animationState == EntExpandableAnimationState.Closing)
         {
-           
-            animationState = EntExpandableAnimationState.Closed;
+
+            _animationState = EntExpandableAnimationState.Closed;
+            StateHasChanged();
         }
-        if (animationState == EntExpandableAnimationState.Opening)
+
+        if (_animationState == EntExpandableAnimationState.Opening)
         {
-            animationState = EntExpandableAnimationState.Opened;
+            _animationState = EntExpandableAnimationState.Opened;
+            StateHasChanged();
         }
-        StateHasChanged();
+
     }
 
-    protected override async Task OnParametersSetAsync()
-    {
-        if (_tempShow != Expended && FirstRendered)
-        {
-            animationState = Expended switch {
-                true => EntExpandableAnimationState.Opening,
-                false => EntExpandableAnimationState.Closing,
-            };
-            // await _expandableIntrop.ToogleAsync(Id, Show.Value);
-            _tempShow = Expended;
-        }
-    }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        _height = (await SharedJsService.GetBoundingClientRect(ElementReference)).ScrollHeight;
+        if (firstRender)
+        {
+            await UpdateHeight();
+        }
+        else if (_updateHeight && _animationState is EntExpandableAnimationState.Closing or EntExpandableAnimationState.Opening)
+        {
+            _updateHeight = false;
+            await UpdateHeight();
+            StateHasChanged();
+        }
+
         await base.OnAfterRenderAsync(firstRender);
     }
 
 
-    enum EntExpandableAnimationState
+
+
+    internal async Task UpdateHeight()
     {
-        Closed,
-        Opened,
-        Opening,
-        Closing
+        try
+        {
+            if (SharedJsService == null)
+                throw new JSException($"SharedJsService Not be Found . please in ject this service in {nameof(EntExpandable)}");
+
+            _height = (await SharedJsService.GetBoundingClientRect(_reference))?.ScrollHeight ?? 0;
+        }
+        catch (Exception ex) when (ex is JSDisconnectedException or TaskCanceledException)
+        {
+            _height = 0;
+        }
+
+        // if (_height > MaxHeight)
+        // {
+        //     _height = MaxHeight.Value;
+        // }
     }
-
-
 }
