--- a/Enter.Dashboard/Pages/Index.razor
+++ b/Enter.Dashboard/Pages/Index.razor
@@ -23,12 +23,12 @@
                     </EntFlex>
                 </CardBody>
             </EntCard>
-            <EntButton @onclick="OpenPopover" type="button" Size="ButtonSize.Large">دکمه بزرگ</EntButton>
             <EntCard class="mb-4" Tag="card" Expandable="true" CardExpand="false" Icon="fa-light fa-user" Title="کامپوننت - دکمه">
                 <CardBody>
                     <EntFlex Direction="FlexDirection.Column"
                              LaptopDirection="FlexDirection.Row"
                              LaptopAlign="FlexAlign.StartCenter"
+                             Align="FlexAlign.StartCenter"
                              Gap="4">
                         <EntButton @onclick="OpenPopover" type="button" Size="ButtonSize.Large">دکمه بزرگ</EntButton>
                         <EntButton type="button" Size="ButtonSize.Default">دکمه معمولی</EntButton>
