--- a/Enter.Dashboard/Shared/MainLayout.razor
+++ b/Enter.Dashboard/Shared/MainLayout.razor
@@ -32,8 +32,8 @@
                 <EntTabPanel Title="صفحه اصلی" Icon="fa-light fa-home" class="w-60">
                     <EntNavMenu class="border-0">
                         <EntNavMenuGroup Title="تعاریف" Icon="fa-light fa-home">
-                            <EntNavMenuTextItem class="bg-light" IconData="fa-light fa-clock" Text="شمارنده" Click="() => AddNewTab<Counter>()"/>
-                            <EntNavMenuTextItem class="bg-light" IconData="fa-light fa-arrow-down" Text="دریافت اطلاعات" Click="() => AddNewTab<FetchData>()"/>
+                            <EntNavMenuTextItem class="bg-light" Icon="fa-light fa-clock" Text="شمارنده" Click="() => AddNewTab<Counter>()"/>
+                            <EntNavMenuTextItem class="bg-light" Icon="fa-light fa-arrow-down" Text="دریافت اطلاعات" Click="() => AddNewTab<FetchData>()" />
                         </EntNavMenuGroup>
                         <EntNavMenuGroup Title="صفحات فرم" Icon="fa-light fa-note">
                             <EntNavMenuTextItem class="bg-light" Text="فرم معمولی" Click="() => AddNewTab<FormLayout>()"/>
