--- a/Enter.UI/Styles/_variables.scss
+++ b/Enter.UI/Styles/_variables.scss
@@ -275,7 +275,7 @@ $color-rose-950: #4c0519;
 $colors: (
         "white": white,
         "black": black,
-        "primary": $color-blue-400,
+        "primary": $color-sky-500,
         "secondary": $color-neutral-500,
         "lighteen":$color-neutral-50,
         "light":$color-neutral-100,
