add text component

--- a/Enter.Dashboard/Pages/Counter.razor
+++ b/Enter.Dashboard/Pages/Counter.razor
@@ -4,7 +4,7 @@
 <PageTitle>Counter</PageTitle>
 
 <div class="m-4 p-4 bg-white border">
-    <h1>Counter</h1>
+    <EntText Type="EntTextType.Heading1" Size="EntTextSize.Heading">Counter</EntText>
 
     <p role="status">Current count: @currentCount</p>
 
