--- a/Enter.Dashboard/Components/FormLayout.razor
+++ b/Enter.Dashboard/Components/FormLayout.razor
@@ -8,7 +8,7 @@
             <div class="row">
                 <div class="tablet:col-1/3 mb-4 ent-form-group">
                     <label>شناسه</label>
-                    <EntInputText Disabled="true" @bind-Value="Input.Id" Icon="@EntIcons.ChevronLeft" />
+                    <EntInputGuid  @bind-Value="Input.Id" Icon="@EntIcons.ChevronLeft" />
                     <ValidationMessage For="() => Input!.Id" />
                 </div>
                 <div class="tablet:col-1/3 mb-4 ent-form-group">
@@ -52,7 +52,7 @@
 
     public class InputModel
     {
-        public string Id { get; set; } = Guid.NewGuid().ToString();
+        public Guid Id { get; set; } = Guid.NewGuid();
 
         [Required(ErrorMessage = "کاربر اجباری میباشد")]
         public string User { get; set; }
