--- a/Enter.UI/Components/Inputs/EntInputGroup.razor
+++ b/Enter.UI/Components/Inputs/EntInputGroup.razor
@@ -29,7 +29,7 @@
     [Parameter]
     public string? Label { get; set; }
 
-    [CascadingParameter]
+    [Parameter]
     public RenderFragment? ChildContent { get; set; }
 
 }
