--- a/Enter.Dashboard/Components/FormLayout.razor
+++ b/Enter.Dashboard/Components/FormLayout.razor
@@ -8,7 +8,7 @@
             <div class="row">
                 <div class="tablet:col-1/3 mb-4 ent-form-group">
                     <label>شناسه</label>
-                    <EntInputGuid  @bind-Value="Input.Id" Icon="@EntIcons.ChevronLeft" />
+                    <EntInputText  @bind-Value="Input.Id" Icon="@EntIcons.ChevronLeft" />
                     <ValidationMessage For="() => Input!.Id" />
                 </div>
                 <div class="tablet:col-1/3 mb-4 ent-form-group">
@@ -32,12 +32,12 @@
 
                     <ValidationMessage For="() => Input!.Role" />
                 </div>
-                <EntFormGroup
+                <EntInputGroup
                     class="tablet:col-1/3 mb-4 ent-form-group" 
                     Label="سن" 
                     For="()=> Input.Age">
                     <EntInputText @bind-Value="Input.Age" />
-                </EntFormGroup>
+                </EntInputGroup>
             </div>
             <div class="row">
                 <div class="tablet:col-1/3">
@@ -52,7 +52,7 @@
 
     public class InputModel
     {
-        public Guid Id { get; set; } = Guid.NewGuid();
+        public string Id { get; set; } = Guid.NewGuid().ToString();
 
         [Required(ErrorMessage = "کاربر اجباری میباشد")]
         public string User { get; set; }
