--- a/src/Enter.UI/Components/Buttons/EntButton.razor
+++ b/src/Enter.UI/Components/Buttons/EntButton.razor
@@ -18,7 +18,7 @@
         .AddClass("bg-secondary cl-dark", !IsOutline && Color == ButtonColor.Secondary)
         .AddClass("bg-light cl-dark", !IsOutline && Color == ButtonColor.Light)
         .AddClass("bg-dark cl-light", !IsOutline && Color == ButtonColor.Dark)
-        .AddClass("bg-succcess cl-light", !IsOutline && Color == ButtonColor.Success)
+        .AddClass("bg-success cl-light", !IsOutline && Color == ButtonColor.Success)
         .AddClass("bg-danger cl-light", !IsOutline && Color == ButtonColor.Danger)
         .AddClass("bg-warning cl-light", !IsOutline && Color == ButtonColor.Warning)
         .AddClass("bg-info cl-light", !IsOutline && Color == ButtonColor.Info)
