--- a/src/Enter.UI/Styles/components/_components.scss
+++ b/src/Enter.UI/Styles/components/_components.scss
@@ -12,3 +12,4 @@
 @import "ent_overlay.component";
 @import "ent_list.component";
 @import "ent_treeview.component";
+@import "ent_toast.component";
